; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libxml2/extr_globals.c_xmlThrDefGetWarningsDefaultValue.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libxml2/extr_globals.c_xmlThrDefGetWarningsDefaultValue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@xmlThrDefMutex = common dso_local global i32 0, align 4
@xmlGetWarningsDefaultValueThrDef = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xmlThrDefGetWarningsDefaultValue(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @xmlThrDefMutex, align 4
  %5 = call i32 @xmlMutexLock(i32 %4)
  %6 = load i32, i32* @xmlGetWarningsDefaultValueThrDef, align 4
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %2, align 4
  store i32 %7, i32* @xmlGetWarningsDefaultValueThrDef, align 4
  %8 = load i32, i32* @xmlThrDefMutex, align 4
  %9 = call i32 @xmlMutexUnlock(i32 %8)
  %10 = load i32, i32* %3, align 4
  ret i32 %10
}

declare dso_local i32 @xmlMutexLock(i32) #1

declare dso_local i32 @xmlMutexUnlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
